@@ -13,3 +13,5 @@ t/10_two_filters_one_pcap.t
 t/11_one_default_filter.t
 t/11_one_ipv4_filter.t
 t/15_two_filters_two_pcaps.t
+t/16_two_filters_two_pcaps_interleaved.t
+t/16_two_filters_two_pcaps_serialized.t
